--- a/index.html
+++ b/index.html
@@ -1,23 +1,23 @@
-<img src="images/_53A4883-016_@marcelopaixa0.jpg" alt="">
-<img src="images/_53A4918-017_@marcelopaixa0.jpg" alt="">
-<img src="images/_53A5382-063_@marcelopaixa0.jpg" alt="">
-<img src="images/_53A5585.jpg" alt="">
-<img src="images/_53A5600.jpg" alt="">
-<img src="images/_53A5609.jpg" alt="">
-<img src="images/_53A5619.jpg" alt="">
-<img src="images/_53A5624.jpg" alt="">
-<img src="images/_53A5635.jpg" alt="">
-<img src="images/_53A5642.jpg" alt="">
-<img src="images/_53A5669.jpg" alt="">
-<img src="images/_53A5689.jpg" alt="">
-<img src="images/_53A5702.jpg" alt="">
-<img src="images/_53A5707.jpg" alt="">
-<img src="images/_53A5746(1).jpg" alt="">
-<img src="images/_53A5746.jpg" alt="">
-<img src="images/_53A5767.jpg" alt="">
-<img src="images/_53A5776(1).jpg" alt="">
-<img src="images/_53A5776.jpg" alt="">
-<img src="images/FullSizeRender(1).jpg" alt="">
-<img src="images/FullSizeRender(2).jpg" alt="">
-<img src="images/FullSizeRender.jpg" alt="">
 <img src="images/IMG_0855.JPG" alt="">
+<img src="images/53A5585.jpg" alt="">
+<img src="images/53A5600.jpg" alt="">
+<img src="images/53A5609.jpg" alt="">
+<img src="images/53A5619.jpg" alt="">
+<img src="images/53A5624.jpg" alt="">
+<img src="images/53A5635.jpg" alt="">
+<img src="images/53A5642.jpg" alt="">
+<img src="images/53A5669.jpg" alt="">
+<img src="images/53A5689.jpg" alt="">
+<img src="images/53A5702.jpg" alt="">
+<img src="images/53A5707.jpg" alt="">
+<img src="images/53A5746.jpg" alt="">
+<img src="images/53A5767.jpg" alt="">
+<img src="images/53A5776.jpg" alt="">
+<img src="images/53A574699.jpg" alt="">
+<img src="images/53A577698.jpg" alt="">
+<img src="images/53A4883016.jpg" alt="">
+<img src="images/53A4918017.jpg" alt="">
+<img src="images/53A5382063.jpg" alt="">
+<img src="images/FullSizeRender.jpg" alt="">
+<img src="images/FullSizeRender1.jpg" alt="">
+<img src="images/FullSizeRender2.jpg" alt="">
