--- a/index.html
+++ b/index.html
@@ -1,3 +1,9 @@
+<style>
+  img {
+    width: 100%;
+  }
+  </style>
+
 <img src="images/IMG_0855.JPG" alt="">
 <img src="images/53A5585.jpg" alt="">
 <img src="images/53A5600.jpg" alt="">
