--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<img src="images/YHRA.jpg" alt="">
 <img src="images/IMG_0855.JPG" alt="">
 <img src="images/53A5585.jpg" alt="">
 <img src="images/53A5600.jpg" alt="">
