--- a/index.html
+++ b/index.html
@@ -27,3 +27,6 @@
 <img src="images/FullSizeRender.jpg" alt="">
 <img src="images/FullSizeRender1.jpg" alt="">
 <img src="images/FullSizeRender2.jpg" alt="">
+<video controls width="250">
+    <source src="images/gif.mp4" type="video/mp4" />
+  </video>
